--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,16 +18,15 @@ body
 	top: 0;
 	left: 0;
 	width: 100%;
-	border-bottom: 5px solid black;
-	background-color: #cfcfcf;
-	overflow: hidden;
+	border-bottom: 1px solid #ccc;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	overflow: auto;
 }
 
 .deskArea
 {
 	height: calc(100% - 100px);
-	background-color: #b5d592;
-	overflow: hidden;
+	overflow: auto;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -39,14 +38,33 @@ body
 	height: calc(100% - 100px);
 }
 
+.searchArea .card
+{
+	display: none;
+}
+
+.searching .searchArea .card
+{
+	display: inline-block;
+}
+
 .searching .deskArea
 {
 	height: 100px;
 }
 
+.searching .deskArea .card
+{
+	width: 64px;
+	height: 90px;
+}
+
 .search-box
 {
+	height: 40px;
 	display: block;
+	width: 600px;
+	margin: 30px auto 25px;
 }
 
 .card
@@ -54,10 +72,9 @@ body
 	display: inline-block;
 	height: 378px;
 	width: 270px;
-	background-clip: border-box;
 	margin: 5px;
 	background-color: gray;
-	outline: 10px solid black;
+	//outline: 10px solid black;
 	outline-offset: -10px;
 	overflow: hidden;
 }
