--- a/public-dev/css/style.css
+++ b/public-dev/css/style.css
@@ -18,8 +18,8 @@ body
 	top: 0;
 	left: 0;
 	width: 100%;
-	border-bottom: 1px solid #ccc;
 	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	background-color: #81CFE0;
 	overflow: hidden;
 }
 
@@ -27,6 +27,12 @@ body
 {
 	overflow: auto;
 	height: calc(100% - 100px);
+	display: none;
+}
+
+.searching .searchArea .cards
+{
+	display: block;
 }
 
 .deskArea
@@ -37,6 +43,7 @@ body
 	bottom: 0;
 	left: 0;
 	width: 100%;
+	background-color: #22A7F0;
 }
 
 .searching .searchArea
@@ -63,6 +70,14 @@ body
 {
 	width: 64px;
 	height: 90px;
+	border-radius: 3px;
+	margin-bottom: 0;
+}
+
+.searching .deskArea .card::after
+{
+	border-width: 2px;
+	border-radius: 3px;
 }
 
 .search-block
@@ -95,7 +110,7 @@ body
 
 .card
 {
-	display: inline-block;
+	float: left;
 	height: 350px;
 	width: 250px;
 	margin: 5px;
@@ -106,6 +121,22 @@ body
 	font-family: 'Palatino', serif;
 	font-weight: 800;
 	color: white;
+	border-radius: 10px;
+	position: relative;
+	border: 1px solid rgb(165, 165, 165);
+	box-shadow: 1px 2px 5px -1px rgba(0, 0, 0, 0.26);
+}
+
+.card::after
+{
+	content: '';
+	width: 100%;
+	height: 100%;
+	border: 5px solid white;
+	border-radius: 10px; /* prevents some rendering bugs with transforms */
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .card:hover
