--- a/public-dev/css/style.css
+++ b/public-dev/css/style.css
@@ -15,21 +15,27 @@ body
 .deskArea
 {
 	height: calc(100% - 100px);
-	overflow: auto;
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	background-color: #22A7F0;
+}
+
+.deskArea .cards
+{
+	height: 100%;
 	padding-top: 10px;
+}
+
+.searching .deskArea .cards
+{
+	padding-top: 0;
 }
 
 .searching .deskArea
 {
-	padding-top: 0;
 	height: 100px;
-	white-space: nowrap;
-	overflow-y: hidden;
 }
 
 .searching .deskArea .card
@@ -38,20 +44,12 @@ body
 	height: 90px;
 	border-radius: 3px;
 	margin-bottom: 0;
-	white-space: nowrap;
 }
 
 .searching .deskArea .card::after
 {
 	border-width: 2px;
 	border-radius: 3px;
-}
-
-.cards
-{
-	overflow: auto;
-	height: calc(100% - 100px);
-	padding-top: 20px;
 }
 
 .card
