added icon files to git

--- a/public-dev/css/style.css
+++ b/public-dev/css/style.css
@@ -147,8 +147,6 @@ body
 
 .remove-button
 {
-	margin-top: 100px;
-	margin-left: auto;
-	margin-right: auto;
+	margin-top: 15px;
+	right: -80px;
 }
-
